--- a/report/08_tables.qmd
+++ b/report/08_tables.qmd
@@ -368,25 +368,43 @@ cat("\n\\end{landscape}\n")
 {{< pagebreak >}}
 
 ```{r}
-#| label: tbl-sensitivities-like-comps-len
+#| label: tbl-sensitivities-like-comps-len1
 #| echo: false
 #| message: false
 #| warning: false
 #| results: "asis"
-#| tbl-cap: "Base model sensitivity to the removal of data sources (length compositional data)."
+#| tbl-cap: "Base model sensitivity to the removal of data sources (length compositional data - 1 of 2)."
 
 cat("\\begin{landscape}\n")
 
 source(here::here("Rcode/table_sens.R"))
-#indices <- read.csv(here::here("report", "figures", "sensitivities", "indices_table.csv"))
-len_comps <- read.csv(here::here("report", "figures", "sensitivities", "length_comps_table.csv"))
+len_comps1 <- read.csv(here::here("report", "figures", "sensitivities", "length_comps_1_table.csv"))
 
-#indices_and_comps <- inner_join(indices, comps, by = c("Label", "Base"))
-#names(comps) <- gsub("X..", "", names(comps))
+names(len_comps1) <-c("Label","Base","- CA TWL","- CA NONTWL","- CA REC","- ORWA TWL","- ORWA NONTWL","- OR REC","- WA REC")
 
-names(len_comps) <-c("Label","Base","- CA TWL","- CA NONTWL","- CA REC","- ORWA TWL","- ORWA NONTWL","- OR REC","- WA REC","- CA CPFV","- ORFS","- Triennial","- WCGBTS","- IPHC","No length comps")
+table_sens(len_comps1)
 
-table_sens(len_comps)
+cat("\n\\end{landscape}\n") 
+```
+
+{{< pagebreak >}}
+
+```{r}
+#| label: tbl-sensitivities-like-comps-len2
+#| echo: false
+#| message: false
+#| warning: false
+#| results: "asis"
+#| tbl-cap: "Base model sensitivity to the removal of data sources (length compositional data - 2 of 2)."
+
+cat("\\begin{landscape}\n")
+
+source(here::here("Rcode/table_sens.R"))
+len_comps2 <- read.csv(here::here("report", "figures", "sensitivities", "length_comps_2_table.csv"))
+
+names(len_comps2) <-c("Label","Base","- CA CPFV","- ORFS","- Triennial","- WCGBTS","- IPHC","No length comps")
+
+table_sens(len_comps2)
 
 cat("\n\\end{landscape}\n") 
 ```
