Owen's edits in 04a complete
pushing the ones I've completed in 04a; added a reference so I could correct it

--- a/report/asar_references.bib
+++ b/report/asar_references.bib
@@ -2407,3 +2407,13 @@ volume = {239}
   year = {2025},
   note = {R package version 2.2},
 }
+
+@article{hamel2022development,
+  title={Development and considerations for application of a longevity-based prior for the natural mortality rate},
+  author={Hamel, Owen S and Cope, Jason M},
+  journal={Fisheries Research},
+  volume={256},
+  pages={106477},
+  year={2022},
+  publisher={Elsevier}
+}
