--- a/report/04c_model_diagnostics.qmd
+++ b/report/04c_model_diagnostics.qmd
@@ -10,18 +10,20 @@ Model convergence was evaluated by starting the minimization process from disper
 
 Sensitivity analyses to examine the impact of different assumptions about model structure on management quantities included a model with an estimated natural mortality rate ($M$), one with estimated steepness ($h$) of the stock-recruit relationship, and one using the 2017 length-weight relationship. Summaries of model results for these sensitivities are presented in @tbl-sensitivities-model-specs. 
 
-The estimated natural mortality was slightly higher than that of the base model (~ 0.053 compared to ~ 0.044 from the base model). Steepness was estimated much higher at the maximum of 1.0, similar to what the 2017 assessment estimated, which would otherwise indicate recruitment is less dependent on the spawning stock biomass, especially at small stock sizes. However, steepness values close to 1 are implausible for slow growing rockfish, supporting the decision to fix steepness at 0.72. 
+The estimated natural mortality was slightly higher than that of the base model (~ 0.053 compared to ~ 0.044 from the base model). Steepness was estimated much higher at the maximum of 1.0, slightly higher than the sensitivity of the 2017 assessment estimated, which would otherwise indicate recruitment is less dependent on the spawning stock biomass, especially at small stock sizes. However, steepness values close to 1 are implausible for slow growing rockfish, supporting the decision to fix steepness at 0.72. 
 
-Model results are sensitive to whether natural mortality and steepness are estimated or fixed, with the alternative models estimating a higher spawning output and a lower depletion status when compared to the base model (@fig-sens_model_spout and @fig-sens_model_status). However, outputs of the model using the 2017 length-weight relationship showed the base model is not sensitive to this update, with very similar spawning outputs between the base and alternative model.   
+Model results are sensitive to whether natural mortality and steepness are estimated or fixed, with the alternative models estimating a higher spawning output and a higher relative spawning output (status) when compared to the base model (@fig-sens_model_spout and @fig-sens_model_status). In contrast, outputs of the model using the 2017 length-weight relationship showed the base model is not sensitive to this update, with similar results between the base and alternative model.   
 
 #### Sensitivity to dataset choice and weighting schemes
 
-Sensitivity analyses to dataset choices to examine the impact of including different data streams were conducted by selectively removing each data source using emphasis factors, as well as by including different weighting schemes for composition data. Summaries of model results for these sensitivities are presented in @tbl-sensitivities-like-indices, @tbl-sensitivities-like-comps-len1, @tbl-sensitivities-like-comps-len1 and @tbl-sensitivities-like-comps-age. Among these, the base model appears to be most sensitive to removing all length compositions, which show a significantly different biomass trajectory and a more optimistic estimate of stock status at the end of the time series (@fig-sens_lengths2_spout through @fig-sens_lengths2_status). Removing all age compositions, \gls{iphc} age compositions only, and applying the McAllister & Ianelli weighting scheme also result in slightly more optimistic estimates of stock status at the end of the time series compared to the base model (@fig-sens_age_spout and @fig-sens_age_status). Furthermore, models with all abundance and \gls{iphc} indices removed resulted in slightly less optimistic estimates of spawning output and stock status at the end of the time series (@fig-sens_indices_spout and @fig-sens_indices_status). Models removing the remaining indices consecutively did not show large differences in the final stock status estimate. A summary of the relative changes in management quantities from all sensitivity models is shown in @fig-sens_sum, and without the removal of all length composition data in @fig-sens_sum_no_lengths.
+Sensitivity analyses to dataset choices to examine the impact of including different data streams were conducted by selectively removing each data source using emphasis factors, as well as by including different weighting schemes for composition data. Summaries of model results for these sensitivities are presented in @tbl-sensitivities-like-indices, @tbl-sensitivities-like-comps-len1, @tbl-sensitivities-like-comps-len1 and @tbl-sensitivities-like-comps-age. Among these, the base model appears to be most sensitive to removing all length compositions, which show a significantly different biomass trajectory and a more optimistic estimate of stock status at the end of the time series (@fig-sens_lengths2_spout through @fig-sens_lengths2_status). 
+
+Removing all age compositions, \gls{iphc} age compositions only or applying the McAllister & Ianelli weighting scheme also result in slightly more optimistic estimates of stock status at the end of the time series compared to the base model (@fig-sens_age_spout and @fig-sens_age_status). Furthermore, models with all abundance and \gls{iphc} indices removed resulted in slightly less optimistic estimates of spawning output and stock status at the end of the time series (@fig-sens_indices_spout and @fig-sens_indices_status). Models removing the remaining indices consecutively did not show large differences in the final stock status estimate. A summary of the relative changes in management quantities from all sensitivity models is shown in @fig-sens_sum, and without the removal of all length composition data in @fig-sens_sum_no_lengths.
  
 ### Retrospective Analysis
 
 A retrospective analysis was conducted by running the base model with data removed for the past 5 years. Comparisons of the time series of absolute and relative spawning output
-and recruitment deviations time series for the runs are shown in @fig-retro-sp-output, @fig-retro-rel-biomass, and @fig-retro-recruit-dev, respectively. Recruitment deviations were more positive as years were removed. However, the change is not large, indicating that the new data are consistent with previous values or the sample sizes are too small to have any impact.
+and recruitment deviations time series for the runs are shown in @fig-retro-sp-output, @fig-retro-rel-biomass, and @fig-retro-recruit-dev, respectively. Recent recruitment deviations, which were negative in the base model, regressed towards the spawner-recruit curve, indicating closer to average recruitments in those years, with higher uncertainty, as data were removed. However, the change is not large, indicating that the new data are consistent with previous values or the sample sizes are too small to have any impact.
  
 General trends in relative depletion (or spawning output) have been relatively stable across assessments (@fig-status_assmnts), with a decline throughout the later half of the 1900’s as the stock was fished down, followed by a reversal in the overall status after substantial catch restrictions were implemented in 2002. Across the most recent assessments, the 2017 assessment [@gertseva_stock_2017] appears to have the most pessimistic depletion across the stock decline in the 1900s but otherwise, the relative depletion trend appears to be similar across the 2011, 2017 and the 2025 assessment as the stock has rebounded from its lowest status. 
 
