--- a/report/03_data.qmd
+++ b/report/03_data.qmd
@@ -132,9 +132,12 @@ A summary of sampling efforts (number of hauls and number of individual fish) in
 Several biological parameters used in the assessment were estimated outside the model or obtained from literature. Their values were treated in the model as fixed, and therefore uncertainty reported for the stock assessment results does not include any uncertainty in these quantities (however, some were investigated via sensitivity analyses described later in this report). These parameters include length-weight relationship parameters, maturity and fecundity parameters, natural mortality, and ageing error. The methods used to derive these parameters in the assessment are described below.
 
 ### Length-Weight Relationship
+
 The parameters for the length-weight relationship were updated to include the most recent WCGBTS data from 2017 - 2024. Length-weight curves were fitted using this equation: 
 
+\begin{center}
 $W =$ `r mod_in$ctl$MG_parms['Wtlen_1_Fem_GP_1', 'INIT']*(10^6)`\*10^-6^$L$^`r mod_in$ctl$MG_parms['Wtlen_2_Fem_GP_1', 'INIT']`^
+\end{center}
 
 Where $W$ is individual weight (kg) and $L$ is total natural length (cm) (@fig-LWrel). 
 
@@ -144,9 +147,11 @@ The length at maturity relationship remained unchanged from the 2017 assessment.
 ### Fecundity
 The fecundity-at-length relationship also remained unchanged from the 2017 assessment and was developed by @dick_meta-analysis_2017 using a hierarchical Bayesian modeling framework. The fecundity was assumed to be related to female body size: 
 
-$F = aL^b$
+$$
+F = aL^b
+$$
 
-Where $F$ is fecundity (number of eggs), $L$ is fish length (cm), and $a$ and $b$ are constant coefficients. For Yelloweye @dick_meta-analysis_2017 estimated $a = 7.21847$\*10^-8^ and $b = 4.043$.
+Where $F$ is fecundity (number of eggs), $L$ is fish length (cm), and $a$ and $b$ are constant coefficients (@fig-fecundity). For Yelloweye @dick_meta-analysis_2017 estimated $a = 7.21847$\*10^-8^ and $b = 4.043$.
 
 ### Natural Mortality
 The 2025 base model used the 2017 assessment's initial value of natural Mortality ($M$) which was estimated based on @hamel_method_2015.
