--- a/report/04b_model_results.qmd
+++ b/report/04b_model_results.qmd
@@ -22,6 +22,6 @@ The fits to the mean age by fleet are generally acceptable and are responsive to
 
 ### Population Trajectory
 
-The estimated time series of spawning output for the entire stock and by area are shown in @fig-spout_combined and @fig-spout_area, respectively. Spawning output relative to unfished spawning output for the entire stock and by area are shown in @fig-status_combined and @fig-status_area. Total biomass, summary biomass and recruitment are shown in @fig-totalbio, @fig-summbio and @fig-tsrecuits, respectively. Trends in total and summary biomass, absolute and relative spawning output track one another very closely. The spawning output of Yelloweye Rockfish started to decline in the 1940s during World War II, but are estimated to have been lightly exploited until the mid-1970s when catches increased and a rapid decline in biomass and spawning output began. The combined relative spawning output reached a minimum of `r min(mod_out$derived_quants$Value[which(startsWith(mod_out$derived_quants$Label,prefix = "Bratio"))])` of unexploited levels in 2000 (@fig-spout_combined). Yelloweye Rockfish spawning output and relative status is estimated to have been gradually increasing since that time, in response to large reductions in harvest and spatial area closures. This trend is similar to the 2017 assessment, however, they estimated a quicker recovery in biomass since 2002 than the 2025 model. Relative spawning output has differed between the two areas modelled in the assessment, with the California resource estimated to have a lower unfished equilibrium spawning output and estimated to be more depleted in 2025 than the Oregon and Washington resource (@fig-status_area). 
+The estimated time series of spawning output for the entire stock and by area are shown in @fig-spout_combined and @fig-spout_area, respectively. Spawning output relative to unfished spawning output for the entire stock and by area are shown in @fig-status_combined and @fig-status_area. Total biomass, summary biomass and recruitment are shown in @fig-totalbio, @fig-summbio and @fig-tsrecuits, respectively. Trends in total and summary biomass, absolute and relative spawning output track one another very closely. The spawning output of Yelloweye Rockfish started to decline in the 1940s during World War II, but are estimated to have been lightly exploited until the mid-1970s when catches increased and a rapid decline in biomass and spawning output began. The combined relative spawning output reached a minimum of `r round(min(mod_out$derived_quants$Value[which(startsWith(mod_out$derived_quants$Label,prefix = "Bratio"))]))` of unexploited levels in 2000 (@fig-spout_combined). Yelloweye Rockfish spawning output and relative status is estimated to have been gradually increasing since that time, in response to large reductions in harvest and spatial area closures. This trend from the update model is similar to that from the 2017 assessment, however, they estimated a quicker recovery in biomass since 2002 than the 2025 model. Relative spawning output has differed between the two areas modelled in the assessment, with the California resource estimated to have a lower unfished equilibrium spawning output and estimated to be more depleted in 2025 than the Oregon and Washington resource (@fig-status_area). 
 
-Recruitment has been relatively dynamic over time, with several large peaks and troughs estimated in the age-0 recruits (@fig-tsrecuits). Compared to the 2017 recruitment, our model estimates larger deviations from zero in the low period before 2000 and the high period after 2000, and estimates above average recruitment up until 2015. In 2016, and to 2024, the recruitment estimates drop below zero, though with the 95% intervals widely overlapping zero. Due to limited age data and protracted age distribution it can be hard to assign recruitment events to specific years, and we end up with autocorrelated patterns based on ages as inferred from lengths. There are some autocorrelated peaks and troughs in recruitment in the 1940s and 50s but those early patterns in recruitment are not very meaningful. The above average recruitment starting in 2020 is also not biologically meaningful because there are no composition data to inform the estimates, and they are pulled by the recruitment deviation prior to zero. The more extreme swings in low to high periods for 1990-2015 and the extended low recruitment starting in 2016 are likely driving the slower recovery rate of Yelloweye Rockfish relative to the 2017 predictions. However, there are no data to inform the most recent years when recruits are not yet selected by the fisheries.
+Recruitment has been relatively dynamic over time, with several large peaks and troughs estimated in the age-0 recruits (@fig-tsrecuits). Compared to the 2017 recruitment, our model estimates larger deviations from zero in the low period before 2000 and the high period after 2000, and estimates above average recruitment up until 2015. In 2016, and to 2024, the estimates of recruitment deviations drop below zero, though with the 95% intervals widely overlapping zero. Due to limited age data and protracted age distribution it can be hard to assign recruitment events to specific years, and we end up with autocorrelated patterns based on ages as inferred from lengths. There are some autocorrelated peaks and troughs in recruitment in the 1940s and 50s but those early patterns in recruitment are not very meaningful. The above average recruitment starting in 2020 is also not biologically meaningful because there are no composition data to inform the estimates, and they are pulled by the recruitment deviation prior to zero. The more extreme swings in low to high periods for 1990-2015 and the extended low recruitment starting in 2016 are likely driving the slower recovery rate of Yelloweye Rockfish relative to the 2017 predictions. However, there are no data to inform the most recent years when recruits are not yet selected by the fisheries.
