--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -87,8 +87,8 @@ The last assessment for Yelloweye Rockfish occurred in 2017. This update assessm
 
 ## Stock biomass and dynamics{-}
 
-The Yelloweye Rockfish assessment uses estimates of fecundity (eggs-at-length) from the @dick_meta-analysis_2017 method, and spawning output is reported in millions of eggs. The unexploited level of spawning stock output is estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 1,045.7-1,328.5 million eggs) (@fig-es-so). At the beginning of 2025, the spawning stock output is estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_2025")], 3)` million eggs (95% confidence interval:
-381–566 million eggs), which represents `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of the unfished spawning output level.
+The Yelloweye Rockfish assessment uses estimates of fecundity (eggs-at-length) from the @dick_meta-analysis_2017 method, and spawning output is reported in millions of eggs. The unexploited level of spawning stock output is estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 1,117.6-1,262.4 million eggs) (@fig-es-so). At the beginning of 2025, the spawning stock output is estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_2025")], 3)` million eggs (95% confidence interval:
+384–571 million eggs), which represents `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of the unfished spawning output level.
 
 Estimated relative spawning output was below the minimum stock size threshold in the late 1990s and was lowest in the early 2000s before increasing over the last 20 years. The 2024 estimated relative spawning output follows an increasing trajectory and is slightly below the management target threshold (@fig-es-so, @fig-es-sb). Though Yelloweye Rockfish are considered a single stock due to their population's even genetic and spatial structure throughout their range, this assessment is modeled with two areas (California and Oregon-Washington). Current population status differs by area wich may be valuable information for making management and allocation decisions (@fig-status-area-es).
 
@@ -230,7 +230,7 @@ knitr::include_graphics("figures/r4ss_plots/plots/recdevs2_withbars.png")
 
 ## Exploitation status{-}
 
-This assessment estimates that the stock of Yelloweye Rockfish off the continental U.S. Pacific Coast is currently at `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of its unexploited level. This is above the overfished threshold of SB25%, and slightly below the management target SB40% of unfished spawning biomass. Fishing intensity increased throughout the 1900s as the stock was fished down, until stabilizing at peak intensity between the mid1980s and late 1990s and substantially decreasing in the late 1990s and early 2000s. Fishing intensity has since been relatively stable (@fig-es-kobe, @tbl-es-spr). 
+This assessment estimates that the stock of Yelloweye Rockfish off the continental U.S. Pacific Coast is currently at `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of its unexploited level. This is above the overfished threshold of SB25%, and slightly above the management target SB40% of unfished spawning biomass. Fishing intensity increased throughout the 1900s as the stock was fished down, until stabilizing at peak intensity between the mid1980s and late 1990s and substantially decreasing in the late 1990s and early 2000s. Fishing intensity has since been relatively stable (@fig-es-kobe, @tbl-es-spr). 
 
 <!-- Exploitation rates (i.e., total catch divided by exploitable biomass, or the annual SPR harvest rate) - include a table with the last 10 years of data and a graph showing the trend in fishing mortality relative to the target (y-axis) plotted against the trend in biomass relative to the target (x-axis). -->
 
@@ -281,7 +281,7 @@ No ecosystem or environmental data was used in the previous Yelloweye Rockfish a
 
 ## Reference points{-}
 
-A list of estimates of the current state of the population, as well as reference points based on 1) a target unfished spawning output of 40%, 2) a spawning potential ratio of 0.5, and 3) the model estimate of maximum sustainable yield, are all listed in @tbl-ref-points-es-1. Unfished spawning stock output for Yelloweye Rockfish was estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 1,045.7-1,328.5 million eggs). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SB40%), which is estimated by the model to be 475 million eggs (95% confidence interval: 418-531), which corresponds to an exploitation rate of 0.026. This harvest rate provides an equilibrium yield of 121 mt at SB40% (95% confidence interval: 107-136 mt). The equilibrium yield curve is shown in @fig-eq-yield-es.
+A list of estimates of the current state of the population, as well as reference points based on 1) a target unfished spawning output of 40%, 2) a spawning potential ratio of 0.5, and 3) the model estimate of maximum sustainable yield, are all listed in @tbl-ref-points-es-1. Unfished spawning stock output for Yelloweye Rockfish was estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 1,117.6-1,262.4 million eggs). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SB40%), which is estimated by the model to be 476 million eggs (95% confidence interval: 447-505), which corresponds to an exploitation rate of 0.026. This harvest rate provides an equilibrium yield of 128 mt at SB40% (95% confidence interval: 120-136 mt). The equilibrium yield curve is shown in @fig-eq-yield-es.
 
 <!-- Management targets and definitions of overfishing, including the harvest rate that brings the stock to equilibrium at B24% for flatfishes and B40% for all other groundfish stocks (BMSY proxies) and the equilibrium stock size that results from fishing at the default harvest rate (the FMSY proxy). Include a summary table that compares estimated reference points for SSB, SPR, Exploitation Rate and Yield based on SSB proxy for MSY, SPR proxy for MSY, and estimated MSY values. -->
 
