edits all around

--- a/report/04b_model_results.qmd
+++ b/report/04b_model_results.qmd
@@ -6,7 +6,7 @@ As a supplement to the model results figures included in this report and describ
 
 ### Parameter Estimates
 
-Estimated and fixed parameter values are shown in @tbl-pars. Unfished recruitment was estimated at `r round(mod_in$ctl$SR_parms['SR_LN(R0)', 'INIT'])` thousands of fish. Yelloweye length at age `r mod_out$Growth_Parameters$A2` (the second reference age) equals `r round(mod_out$Growth_Parameters$L_a_A2)` cm. @fig-growth shows the estimated growth curve. Spawning output-at-length is shown in @fig-spoutlen. Spawning output in the assessment is expressed in millions of eggs.
+Estimated and fixed parameter values are shown in @tbl-pars. Unfished recruitment was estimated at `r round(mod_out$parameters["SR_LN(R0)", "Value"])` thousands of fish. Yelloweye length at age `r mod_out$Growth_Parameters$A2` (the second reference age) equals `r round(mod_out$Growth_Parameters$L_a_A2)` cm. @fig-growth shows the estimated growth curve. Spawning output-at-length is shown in @fig-spoutlen. Spawning output in the assessment is expressed in millions of eggs.
 
 Estimated stock-recruit function for the assessment model is shown in @fig-SRcurve. Estimated recruitment deviations are shown @fig-recdevs_err. Recruitment of Yelloweye Rockfish was estimated to be variable over time, with the most recent years experiencing slightly lower than average recruitment after periods of low and high recruitment during the late 1980s to the early 2000s, and late 2000s to late 2010s, respectively. Reflecting these variable recruitment patterns, the estimated stock-recruit function predicts a relatively wide range of cohort sizes over the observed range of spawning biomass. The model output recruitment variance ($RMSE = 0.48$) is consistent with the fixed input recruitment variance ($R = 0.5$) [@methot_adjusting_2011].
 
